--- a/configs/halpe_coco_wholebody_136/resnet/256x192_res50_lr1e-3_2x-dcn-combined.yaml
+++ b/configs/halpe_coco_wholebody_136/resnet/256x192_res50_lr1e-3_2x-dcn-combined.yaml
@@ -2,8 +2,8 @@ DATASET:
   TRAIN:
     TYPE: 'Halpe_coco_wholebody_136'
     ROOT: 
-      - './data/halpe/'
-      - './data/coco/'
+      - '/users/dzhan116/data/datasets/alphapose/halpe'
+      - '/users/dzhan116/data/datasets/alphapose/coco'
     IMG_PREFIX: 
       - 'images/train2015'
       - 'train2017'
@@ -18,12 +18,13 @@ DATASET:
       PROB_HALF_BODY: 0.3
   VAL:
     TYPE: 'Halpe_136'
-    ROOT: './data/halpe/'
+    ROOT: '/users/dzhan116/data/datasets/alphapose/halpe'
     IMG_PREFIX: 'images/val2017'
     ANN: 'annotations/halpe_val_v1.json'
+    VAL: 'annotations/halpe_val_v1.json'
   TEST:
     TYPE: 'Halpe_136_det'
-    ROOT: './data/halpe/'
+    ROOT: '/users/dzhan116/data/datasets/alphapose/halpe'
     IMG_PREFIX: 'images/val2017'
     DET_FILE: './exp/json/test_det_yolo.json'
     ANN: 'annotations/halpe_val_v1.json'
